hphp/hack/test/typecheck/array/disallow_hetergeneous_inputs_for_varray.php.exp
ERROR: File "disallow_hetergeneous_inputs_for_varray.php", line 4, characters 32-32:
An arrow `=>` is expected here. (Parsing[1002])
ERROR: File "disallow_hetergeneous_inputs_for_varray.php", line 4, characters 32-32:
Unbound name: `]` (a global constant) (Naming[2049])
ERROR: File "disallow_hetergeneous_inputs_for_varray.php", line 4, characters 32-32:
Unbound global constant (Typing) (Typing[4106])
